More chart fixups
Add structured config for:

1. license key
2. admin email configs
3. auto-inferring git server from airgapped

--- a/charts/console/templates/git-server.yaml
+++ b/charts/console/templates/git-server.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.gitServer.enabled }}
+{{- if or .Values.gitServer.enabled .Values.console.config.airgap }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
