--- a/charts/console/templates/secrets.yaml
+++ b/charts/console/templates/secrets.yaml
@@ -80,6 +80,12 @@ data:
 {{ if .Values.console.config.agentHelmValues }}
   CONSOLE_AGENT_HELM_VALUES: {{ .Values.console.config.agentHelmValues | toYaml | b64enc | quote }}
 {{ end }}
+{{ if .Values.console.config.licenseKey }}
+  CONSOLE_LICENSE_KEY: {{ .Values.console.config.licenseKey | b64enc | quote }}
+{{ end }}
+{{ if .Values.console.config.adminEmails }}
+  CONSOLE_ADMIN_EMAILS: {{ .Values.console.config.adminEmails | join "," | b64enc | quote }}
+{{ end }}
 {{ if .Values.cloud.pgRootCert }}
 ---
 apiVersion: v1
