--- a/assets/design-system/package.json
+++ b/assets/design-system/package.json
@@ -78,14 +78,9 @@
     "react-use-measure": "2.1.1",
     "rehype-raw": "7.0.0",
     "resize-observer-polyfill": "1.5.1",
-    "type-fest": "4.8.3",
-    "use-immer": "0.9.0",
-    "usehooks-ts": "2.9.1"
+    "use-immer": "0.9.0"
   },
   "devDependencies": {
-    "@babel/core": "7.23.6",
-    "@babel/preset-env": "7.23.6",
-    "@babel/preset-react": "7.23.3",
     "@react-types/shared": "3.22.0",
     "@storybook/addon-docs": "9.1.10",
     "@storybook/addon-links": "9.1.10",
@@ -98,16 +93,15 @@
     "@types/react-transition-group": "4.4.12",
     "@vitest/coverage-v8": "1.0.4",
     "@vitest/ui": "1.0.4",
-    "babel-loader": "9.1.3",
     "eslint-plugin-storybook": "9.1.10",
     "fuse.js": "6.6.2",
     "http-server": "14.1.1",
-    "jest-mock": "29.5.0",
     "monaco-editor": "0.52.2",
     "npm-run-all": "4.1.5",
     "react-transition-group": "4.4.5",
     "rimraf": "5.0.5",
     "storybook": "9.1.10",
+    "type-fest": "4.8.3",
     "vite-bundle-visualizer": "1.2.1",
     "vite-plugin-dts": "4.3.0"
   },
