--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -3195,6 +3195,15 @@
   publisher: aws-privateca
 - name: aws-secrets-store-csi-driver-provider
   versions:
+  - version: v2.2.1-eksbuild.1
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v2.1.1-eksbuild.1
     compatibilities:
     - '1.35'
