--- a/assets/design-system/package.json
+++ b/assets/design-system/package.json
@@ -35,15 +35,14 @@
     "fix:format": "prettier --write --no-error-on-unmatched-pattern ./src",
     "fix:js": "eslint ./src --fix",
     "prepublishOnly": "npm run build",
-    "firebase:start": "yarn build:storybook && npx firebase emulators:start",
     "analyze": "vite-bundle-visualizer -o stats.html"
   },
   "engines": {
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "@emotion/react": "11.11.1",
-    "@emotion/styled": "11.11.0",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.1",
     "@floating-ui/react-dom-interactions": "0.13.3",
     "@loomhq/loom-embed": "1.5.0",
     "@markdoc/markdoc": "0.4.0",
@@ -79,38 +78,27 @@
     "react-use-measure": "2.1.1",
     "rehype-raw": "7.0.0",
     "resize-observer-polyfill": "1.5.1",
-    "type-fest": "4.8.3",
-    "use-immer": "0.9.0",
-    "usehooks-ts": "2.9.1"
+    "use-immer": "0.9.0"
   },
   "devDependencies": {
-    "@babel/core": "7.23.6",
-    "@babel/preset-env": "7.23.6",
-    "@babel/preset-react": "7.23.3",
-    "@react-types/shared": "3.22.0",
+    "@react-types/shared": "3.25.0",
     "@storybook/addon-docs": "9.1.10",
     "@storybook/addon-links": "9.1.10",
     "@storybook/builder-vite": "9.1.10",
     "@storybook/react-vite": "9.1.10",
-    "@testing-library/jest-dom": "5.17.0",
     "@types/chroma-js": "2.4.3",
     "@types/d3": "7.4.3",
     "@types/lodash-es": "4.17.12",
     "@types/react-transition-group": "4.4.12",
-    "@vitest/coverage-v8": "1.0.4",
-    "@vitest/ui": "1.0.4",
-    "babel-loader": "9.1.3",
-    "conventional-changelog-conventionalcommits": "6.1.0",
     "eslint-plugin-storybook": "9.1.10",
-    "firebase-tools": "11.30.0",
     "fuse.js": "6.6.2",
     "http-server": "14.1.1",
-    "jest-mock": "29.5.0",
     "monaco-editor": "0.52.2",
     "npm-run-all": "4.1.5",
     "react-transition-group": "4.4.5",
     "rimraf": "5.0.5",
     "storybook": "9.1.10",
+    "type-fest": "4.8.3",
     "vite-bundle-visualizer": "1.2.1",
     "vite-plugin-dts": "4.3.0"
   },
