--- a/charts/controller/crds/deployments.plural.sh_sentinels.yaml
+++ b/charts/controller/crds/deployments.plural.sh_sentinels.yaml
@@ -56,6 +56,10 @@ spec:
                             this check
                           properties:
                             cases:
+                              description: A list of custom test cases to run for
+                                this check.  These can provide yaml-configurable targeted
+                                cases of things like coredns, load balancers, pvcs,
+                                etc.
                               items:
                                 properties:
                                   coredns:
